@@ -13,9 +13,9 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.Key;
 import java.util.Base64;
 import java.util.Date;
@@ -29,7 +29,7 @@ public class JwtTokenProvider {
     // Token 식별자
     public static final String BEARER_PREFIX = "Bearer ";
     // 토큰 만료시간
-    private final long TOKEN_TIME = 60 * 60 * 1000L; // 60분
+    private final long TOKEN_TIME = 60 * 60 * 1000L;
 
     @Value("${jwt.secret.key}") // Base64 Encode 한 SecretKey
     private String secretKey;
@@ -45,7 +45,12 @@ public class JwtTokenProvider {
         key = Keys.hmacShaKeyFor(bytes);
     }
 
-    // 토큰 생성
+    /**
+     * JWT 토큰 생성
+     * @param email : 유저 이메일
+     * @param role : 유저 권한
+     * @return : JWT 토큰
+     */
     public String createToken(String email, UserRoleEnum role) {
         Date date = new Date();
 
@@ -59,22 +64,26 @@ public class JwtTokenProvider {
                         .compact();
     }
 
-    // JWT Cookie 에 저장
+    /**
+     * JWT를 Cookie에 저장
+     * @param token JWT 토큰
+     * @param res 응답 인터페이스
+     */
     public void addJwtToCookie(String token, HttpServletResponse res) {
-        try {
-            token = URLEncoder.encode(token, "utf-8").replaceAll("\\+", "%20"); // Cookie Value 에는 공백이 불가능해서 encoding 진행
+        token = URLEncoder.encode(token, StandardCharsets.UTF_8).replaceAll("\\+", "%20"); // Cookie Value 에는 공백이 불가능해서 encoding 진행
 
-            Cookie cookie = new Cookie(AUTHORIZATION_HEADER, token); // Name-Value
-            cookie.setPath("/");
+        Cookie cookie = new Cookie(AUTHORIZATION_HEADER, token); // Name-Value
+        cookie.setPath("/");
 
-            // Response 객체에 Cookie 추가
-            res.addCookie(cookie);
-        } catch (UnsupportedEncodingException e) {
-            logger.error(e.getMessage());
-        }
+        // Response 객체에 Cookie 추가
+        res.addCookie(cookie);
     }
 
-    // JWT 토큰 substring
+    /**
+     * JWT 토큰 substring
+     * @param tokenValue 쿠키에 저장된 값
+     * @return JWT 토큰만 슬라이싱해서 반환
+     */
     public String substringToken(String tokenValue) {
         if (StringUtils.hasText(tokenValue) && tokenValue.startsWith(BEARER_PREFIX)) {
             return tokenValue.substring(7);
@@ -83,12 +92,16 @@ public class JwtTokenProvider {
         throw new NullPointerException("Not Found Token");
     }
 
-    // 토큰 검증
+    /**
+     * 토큰 검증
+     * @param token JWT 토큰
+     * @return boolean 토큰 유효성
+     */
     public boolean validateToken(String token) {
         try {
             Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
             return true;
-        } catch (SecurityException | MalformedJwtException | SignatureException e) {
+        } catch (SecurityException | MalformedJwtException e) {
             logger.error("Invalid JWT signature, 유효하지 않는 JWT 서명 입니다.");
         } catch (ExpiredJwtException e) {
             logger.error("Expired JWT token, 만료된 JWT token 입니다.");
@@ -100,22 +113,26 @@ public class JwtTokenProvider {
         return false;
     }
 
-    // 토큰에서 사용자 정보 가져오기
+    /**
+     * 토큰에서 유저 정보 가져오기
+     * @param token jwt 토큰
+     * @return 유저 정보 Body
+     */
     public Claims getUserInfoFromToken(String token) {
         return Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token).getBody();
     }
 
-    // HttpServletRequest 에서 Cookie Value : JWT 가져오기
+    /**
+     * HttpServletRequest 에서 Cookie Value : JWT 가져오기
+     * @param req : httpServeltRequest
+     * @return 쿠키에 저장돼있는 bearer+JWT
+     */
     public String getTokenFromRequest(HttpServletRequest req) {
         Cookie[] cookies = req.getCookies();
         if(cookies != null) {
             for (Cookie cookie : cookies) {
                 if (cookie.getName().equals(AUTHORIZATION_HEADER)) {
-                    try {
-                        return URLDecoder.decode(cookie.getValue(), "UTF-8"); // Encode 되어 넘어간 Value 다시 Decode
-                    } catch (UnsupportedEncodingException e) {
-                        return null;
-                    }
+                    return URLDecoder.decode(cookie.getValue(), StandardCharsets.UTF_8); // Encode 되어 넘어간 Value 다시 Decode
                 }
             }
         }
